--- a/LearnSwiftUI-V2/SuportingFiles/Info.plist
+++ b/LearnSwiftUI-V2/SuportingFiles/Info.plist
@@ -27,6 +27,8 @@
 	</dict>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSFaceIDUsageDescription</key>
+	<string>To allow you to unlock your note without entering your password.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
